--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,4 +33,4 @@ jobs:
       with:
         github_token: ${{ secrets.PERSONAL_TOKEN }}
         publish_dir: ./dist
-        cname: ataidev.cc
+        cname: www.ataidev.cc
