--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@11ty/eleventy": "^2.0.1",
         "@11ty/eleventy-plugin-rss": "^1.2.0",
         "cross-env": "^7.0.3",
+        "express": "^4.19.2",
         "html-minifier-terser": "^7.2.0",
         "node-html-parser": "^6.1.13",
         "sass": "^1.49.9"
