--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=body.css-settings-manager { --callout-title-opacity: 0.1; } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
-STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-hidden-frameless obsidian-app theme-light show-view-header show-ribbon code-styler-style-inline css-settings-manager anp-td-none is-focused ctp-latte ctp-mocha ctp-accent-light-mauve ctp-accent-rosewater anuppuccin-accent-toggle anp-no-highlight anp-h1-red anp-h2-peach anp-h3-green anp-h4-teal anp-h5-lavender anp-h6-mauve anp-bold-red anp-italic-green anp-highlight-yellow anp-default-rainbow anp-default-tab
+STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-hidden-frameless obsidian-app theme-light show-ribbon show-view-header css-settings-manager anp-td-none outliner-plugin-dnd is-focused ctp-latte ctp-mocha ctp-accent-light-mauve ctp-accent-rosewater anuppuccin-accent-toggle anp-no-highlight anp-callout-block anp-h1-red anp-h2-peach anp-h3-green anp-h4-teal anp-h5-lavender anp-h6-mauve anp-bold-red anp-italic-green anp-highlight-yellow anp-default-rainbow anp-default-tab
 USE_FULL_RESOLUTION_IMAGES=false
 THEME=https://raw.githubusercontent.com/AnubisNekhet/AnuPpuccin/HEAD/theme.css
 BASE_THEME=light
