--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
-STYLE_SETTINGS_CSS=body.css-settings-manager { --callout-title-opacity: 0.1; } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
+STYLE_SETTINGS_CSS=body.css-settings-manager { --callout-title-opacity: 0.1; --anp-editor-font-rv: IBM Plex Sans KR; --anp-editor-font-source: IBM Plex Sans KR; } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
 STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-hidden-frameless obsidian-app theme-light show-ribbon show-view-header css-settings-manager anp-td-none outliner-plugin-dnd is-focused ctp-latte ctp-mocha ctp-accent-light-mauve ctp-accent-rosewater anuppuccin-accent-toggle anp-no-highlight anp-callout-block anp-h1-red anp-h2-peach anp-h3-green anp-h4-teal anp-h5-lavender anp-h6-mauve anp-bold-red anp-italic-green anp-highlight-yellow anp-default-rainbow anp-default-tab
 USE_FULL_RESOLUTION_IMAGES=false
 THEME=https://raw.githubusercontent.com/AnubisNekhet/AnuPpuccin/HEAD/theme.css
