--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SITE_NAME_HEADER=ataidev.cc
 SITE_MAIN_LANGUAGE=kr
-SITE_BASE_URL=
+SITE_BASE_URL=https://www.ataidev.cc/
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
